@@ -10,8 +10,11 @@ import com.example.tastyhub.common.domain.post.dtos.PostResponse;
 import com.example.tastyhub.common.domain.post.dtos.PostUpdateRequest;
 import com.example.tastyhub.common.domain.post.entity.Post;
 import com.example.tastyhub.common.domain.post.entity.Post.PostState;
-import java.util.Collections;
 import java.util.List;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 public class PostFixture {
 
@@ -53,8 +56,10 @@ public class PostFixture {
         .userImg("userImg")
         .title("title")
         .build();
+    public static Pageable pageable = PageRequest.of(0, 1);
 
 
-    public static final List<PagingPostResponse> PAGING_POST_RESPONSES = Collections.singletonList(
-        PAGING_POST_RESPONSE);
+
+
+    public static final Page<PagingPostResponse> PAGING_POST_RESPONSES = new PageImpl(List.of(PAGING_POST_RESPONSE),pageable, 1);
 }
